--- a/opensearch/plugindefinition.yaml
+++ b/opensearch/plugindefinition.yaml
@@ -6,14 +6,14 @@ kind: PluginDefinition
 metadata:
   name: opensearch
 spec:
-  version: 0.0.49
+  version: 0.0.50
   displayName: OpenSearch
   description: Creates and manages an OpenSearch environment with automated deployment, provisioning, and orchestration of clusters and dashboards using the OpenSearch Operator.
   icon: 'https://raw.githubusercontent.com/cloudoperators/greenhouse-extensions/main/opensearch/logo.png'
   helmChart:
     name: opensearch
     repository: oci://ghcr.io/cloudoperators/greenhouse-extensions/charts
-    version: 0.0.49
+    version: 0.0.50
   options:
     - name: cluster.cluster.general.monitoring.pluginUrl
       description: "Defines a custom URL for the monitoring plugin. Leave blank to use the default monitoring configuration."
@@ -265,19 +265,19 @@ spec:
       description: "Path to CA certificate for OIDC provider verification"
       required: false
       type: string
-    - name: cluster.cluster.dashboards.oidc.clientId
+    - name: auth.oidc.dashboards.clientId
       description: "OIDC client ID for OpenSearch Dashboards"
       required: false
       type: secret
-    - name: cluster.cluster.dashboards.oidc.clientSecret
+    - name: auth.oidc.dashboards.clientSecret
       description: "OIDC client secret for OpenSearch Dashboards"
       required: false
       type: secret
-    - name: cluster.cluster.dashboards.oidc.scope
+    - name: auth.oidc.dashboards.scope
       description: "OIDC scopes to request (e.g., 'openid email profile')"
       required: false
       type: string
-    - name: cluster.cluster.dashboards.oidc.baseRedirectUrl
+    - name: auth.oidc.dashboards.baseRedirectUrl
       description: "Base redirect URL for OIDC callback (your dashboards URL)"
       required: false
       type: string
@@ -303,19 +303,19 @@ spec:
       description: "Path to CA certificate for OIDC provider verification for SIEM cluster"
       required: false
       type: string
-    - name: siem.cluster.dashboards.oidc.clientId
+    - name: siem.auth.oidc.dashboards.clientId
       description: "OIDC client ID for SIEM OpenSearch Dashboards"
       required: false
       type: secret
-    - name: siem.cluster.dashboards.oidc.clientSecret
+    - name: siem.auth.oidc.dashboards.clientSecret
       description: "OIDC client secret for SIEM OpenSearch Dashboards"
       required: false
       type: secret
-    - name: siem.cluster.dashboards.oidc.scope
+    - name: siem.auth.oidc.dashboards.scope
       description: "OIDC scopes to request for SIEM cluster"
       required: false
       type: string
-    - name: siem.cluster.dashboards.oidc.baseRedirectUrl
+    - name: siem.auth.oidc.dashboards.baseRedirectUrl
       description: "Base redirect URL for OIDC callback for SIEM dashboards"
       required: false
       type: string
