--- a/shoot-grafter/charts/crds/shoot-grafter.cloudoperators.dev_careinstructions.yaml
+++ b/shoot-grafter/charts/crds/shoot-grafter.cloudoperators.dev_careinstructions.yaml
@@ -1,4 +1,5 @@
-# SPDX-FileCopyrightText: 2025 SAP SE or an SAP affiliate company and Greenhouse contributors
+# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
+#
 # SPDX-License-Identifier: Apache-2.0
 
 ---
@@ -6,7 +7,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.18.0
+    controller-gen.kubebuilder.io/version: v0.20.0
   name: careinstructions.shoot-grafter.cloudoperators.dev
 spec:
   group: shoot-grafter.cloudoperators.dev
@@ -106,84 +107,68 @@ spec:
                   type: string
                 type: array
               shootSelector:
-                description: ShootSelector is a label selector targeting shoots that
-                  should be reconciled.
+                description: ShootSelector combines label-based and CEL expression-based
+                  filtering for shoots.
                 properties:
-                  matchExpressions:
-                    description: matchExpressions is a list of label selector requirements.
-                      The requirements are ANDed.
-                    items:
-                      description: |-
-                        A label selector requirement is a selector that contains values, a key, and an operator that
-                        relates the key and values.
-                      properties:
-                        key:
-                          description: key is the label key that the selector applies
-                            to.
-                          type: string
-                        operator:
+                  expression:
+                    description: Expression is a CEL expression for filtering shoots
+                      by status or other fields.
+                    maxLength: 1024
+                    type: string
+                  labelSelector:
+                    description: LabelSelector is a label selector targeting shoots
+                      that should be reconciled.
+                    properties:
+                      matchExpressions:
+                        description: matchExpressions is a list of label selector
+                          requirements. The requirements are ANDed.
+                        items:
                           description: |-
-                            operator represents a key's relationship to a set of values.
-                            Valid operators are In, NotIn, Exists and DoesNotExist.
+                            A label selector requirement is a selector that contains values, a key, and an operator that
+                            relates the key and values.
+                          properties:
+                            key:
+                              description: key is the label key that the selector
+                                applies to.
+                              type: string
+                            operator:
+                              description: |-
+                                operator represents a key's relationship to a set of values.
+                                Valid operators are In, NotIn, Exists and DoesNotExist.
+                              type: string
+                            values:
+                              description: |-
+                                values is an array of string values. If the operator is In or NotIn,
+                                the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                                the values array must be empty. This array is replaced during a strategic
+                                merge patch.
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                          required:
+                          - key
+                          - operator
+                          type: object
+                        type: array
+                        x-kubernetes-list-type: atomic
+                      matchLabels:
+                        additionalProperties:
                           type: string
-                        values:
-                          description: |-
-                            values is an array of string values. If the operator is In or NotIn,
-                            the values array must be non-empty. If the operator is Exists or DoesNotExist,
-                            the values array must be empty. This array is replaced during a strategic
-                            merge patch.
-                          items:
-                            type: string
-                          type: array
-                          x-kubernetes-list-type: atomic
-                      required:
-                      - key
-                      - operator
-                      type: object
-                    type: array
-                    x-kubernetes-list-type: atomic
-                  matchLabels:
-                    additionalProperties:
-                      type: string
-                    description: |-
-                      matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
-                      map is equivalent to an element of matchExpressions, whose key field is "key", the
-                      operator is "In", and the values array contains only "value". The requirements are ANDed.
+                        description: |-
+                          matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                          map is equivalent to an element of matchExpressions, whose key field is "key", the
+                          operator is "In", and the values array contains only "value". The requirements are ANDed.
+                        type: object
                     type: object
+                    x-kubernetes-map-type: atomic
                 type: object
-                x-kubernetes-map-type: atomic
             required:
             - gardenNamespace
             type: object
           status:
             description: CareInstructionStatus holds the status of the CareInstruction.
             properties:
-              clusters:
-                description: Clusters is a list of clusters managed by this CareInstruction
-                  with their detailed status.
-                items:
-                  description: ClusterStatus represents the status of a single cluster
-                    managed by this CareInstruction.
-                  properties:
-                    message:
-                      description: Message provides additional information about the
-                        cluster status when Failed.
-                      type: string
-                    name:
-                      description: Name of the cluster.
-                      type: string
-                    status:
-                      description: Status represents the current state of the cluster
-                        (Ready or Failed).
-                      enum:
-                      - Ready
-                      - Failed
-                      type: string
-                  required:
-                  - name
-                  - status
-                  type: object
-                type: array
               createdClusters:
                 description: CreatedClusters is the number of clusters created by
                   this CareInstruction.
@@ -192,6 +177,33 @@ spec:
                 description: FailedClusters is the number of clusters that failed
                   to be created by this CareInstruction.
                 type: integer
+              shoots:
+                description: Shoots is a list of shoots targeted by this CareInstruction
+                  with their detailed status.
+                items:
+                  description: ShootStatus represents the status of a single shoot
+                    targeted by this CareInstruction.
+                  properties:
+                    message:
+                      description: Message provides additional information about the
+                        shoot status.
+                      type: string
+                    name:
+                      description: Name of the shoot.
+                      type: string
+                    status:
+                      description: Status represents the current state of the shoot
+                        (Onboarded, Failed or Excluded).
+                      enum:
+                      - Onboarded
+                      - Failed
+                      - Excluded
+                      type: string
+                  required:
+                  - name
+                  - status
+                  type: object
+                type: array
               statusConditions:
                 description: StatusConditions represent the latest available observations
                   of the CareInstruction's current state.
@@ -230,9 +242,9 @@ spec:
                     - type
                     x-kubernetes-list-type: map
                 type: object
-              totalShootCount:
-                description: TotalShootCount is the total number of shoots targeted
-                  by this CareInstruction.
+              totalTargetShootCount:
+                description: TotalTargetShoots is the total number of shoots matching
+                  the label selector (before CEL filtering).
                 type: integer
             type: object
         type: object
