--- a/opensearch/chart/templates/siem-security-config.yaml
+++ b/opensearch/chart/templates/siem-security-config.yaml
@@ -19,12 +19,19 @@ stringData:
         kibana:
           server_username: {{ .Values.siem.usersCredentials.siemdashboards.username | default "siemdashboards" }}
         http:
+          {{- if .Values.siem.auth.oidc.enabled }}
+          anonymous_auth_enabled: true
+          xff:
+            enabled: false
+          {{- else }}
           anonymous_auth_enabled: false
           xff:
             enabled: true
             internalProxies: '.*'  # Trust all internal proxies (service-proxy)
             remoteIpHeader: 'x-forwarded-for'
+          {{- end }}
         authc:
+          {{- if not .Values.siem.auth.oidc.enabled }}
           proxy_auth_domain:
             description: "Authenticate via proxy headers from OAuth2 proxy"
             http_enabled: true
@@ -39,14 +46,22 @@ stringData:
                 roles_separator: ","
             authentication_backend:
               type: noop
+          {{- end }}
           basic_internal_auth_domain:
             description: "Authenticate via HTTP Basic against internal users database"
             http_enabled: true
             transport_enabled: true
+            {{- if .Values.siem.auth.oidc.enabled }}
+            order: 1
+            http_authenticator:
+              type: basic
+              challenge: false
+            {{- else }}
             order: 1
             http_authenticator:
               type: basic
               challenge: true
+            {{- end }}
             authentication_backend:
               type: intern
           {{- if .Values.siem.auth.oidc.enabled }}
@@ -63,9 +78,11 @@ stringData:
                 roles_key: {{ .Values.siem.auth.oidc.rolesKey | quote }}
                 openid_connect_url: {{ .Values.siem.auth.oidc.provider | quote }}
                 enable_ssl: true
+                {{- if .Values.siem.auth.oidc.caPath }}
                 openid_connect_idp:
                   enable_ssl: true
                   pemtrustedcas_filepath: {{ .Values.siem.auth.oidc.caPath | quote }}
+                {{- end }}
             authentication_backend:
               type: noop
           {{- end }}
