add metrics Service and ServiceMonitor to shoot-grafter chart
On-behalf-of: @SAP krzysztof.zagorski@sap.com

--- a/shoot-grafter/charts/values.yaml
+++ b/shoot-grafter/charts/values.yaml
@@ -2,7 +2,12 @@
 # SPDX-License-Identifier: Apache-2.0
 
 replicaCount: 1
+
 image:
   registry: ghcr.io/cloudoperators
   repository: shoot-grafter
   pullPolicy: IfNotPresent
+
+monitoring:
+  labels:
+    plugin: kube-monitoring
